--- a/.plan.md
+++ b/.plan.md
@@ -15,6 +15,8 @@
 
 | Project | Description | Finished Date |
 |------|-------------|----------|
+| sheep | whitelabeling bug fixes | 2024-07-03 |
+| sheep | whitelabel fixes, split domains | 2024-07-02 |
 | sheep | consignment scoping | 2024-07-01 |
 | sheep | white labeling marketplace | 2024-07-01 |
 | sheep | card grade and pop on card item in marketplace create task | 2024-06-28 |
