--- a/.plan.md
+++ b/.plan.md
@@ -3,6 +3,7 @@
 
 | Context | Description |
 |------|-------------|
+| cxfs | trends new calcs breakdown |
 | cxfs | orders page scoping |
 | cxfs | BC order sync |
 | enl | estimate ks project |
