--- a/.plan.md
+++ b/.plan.md
@@ -3,7 +3,7 @@
 
 | Context | Description |
 |------|-------------|
-| cxfs | trends new calcs breakdown |
+| cxfs | trends new calcs breakdown and scoping update |
 | cxfs | orders page scoping |
 | cxfs | BC order sync |
 | enl | estimate ks project |
