--- a/.plan.md
+++ b/.plan.md
@@ -3,6 +3,7 @@
 
 | Context | Description |
 |------|-------------|
+| sheep | prep deploy to staging |
 | cxfs | trends new calcs breakdown and scoping update |
 | cxfs | orders page scoping |
 | cxfs | BC order sync |
