--- a/.plan.md
+++ b/.plan.md
@@ -3,7 +3,6 @@
 
 | Context | Description |
 |------|-------------|
-| sheep | consignment breakdown |
 | cxfs | trends new calcs breakdown and scoping update |
 | cxfs | orders page scoping |
 | cxfs | BC order sync |
@@ -17,6 +16,7 @@
 
 | Project | Description | Finished Date |
 |------|-------------|----------|
+| sheep | consignment breakdown | 2024-07-03 |
 | sheep | prep deploy marketplace to staging | 2024-07-03 |
 | sheep | whitelabeling bug fixes | 2024-07-03 |
 | sheep | whitelabel fixes, split domains | 2024-07-02 |
