--- a/.plan.md
+++ b/.plan.md
@@ -3,7 +3,6 @@
 
 | Context | Description |
 |------|-------------|
-| cxfs | trends new calcs breakdown and scoping update |
 | cxfs | orders page scoping |
 | cxfs | BC order sync |
 | enl | estimate ks project |
@@ -16,6 +15,7 @@
 
 | Project | Description | Finished Date |
 |------|-------------|----------|
+| cxfs | trends new calcs breakdown and scoping update | 2024-07-05 |
 | sheep | consignment breakdown | 2024-07-03 |
 | sheep | prep deploy marketplace to staging | 2024-07-03 |
 | sheep | whitelabeling bug fixes | 2024-07-03 |
