--- a/.plan.md
+++ b/.plan.md
@@ -3,6 +3,8 @@
 
 | Context | Description |
 |------|-------------|
+| cxfs | trend PR reviews |
+| sheep | deploy to live |
 | cxfs | orders page scoping |
 | cxfs | BC order sync |
 | enl | estimate ks project |
