--- a/.plan.md
+++ b/.plan.md
@@ -4,6 +4,7 @@
 | Context | Description |
 |------|-------------|
 | cxfs | trend PR reviews |
+| sheep | break down notes to tasks |
 | sheep | deploy to live |
 | cxfs | orders page scoping |
 | cxfs | BC order sync |
