--- a/.plan.md
+++ b/.plan.md
@@ -3,8 +3,6 @@
 
 | Context | Description |
 |------|-------------|
-| cxfs | trend PR reviews |
-| sheep | break down notes to tasks |
 | sheep | deploy to live |
 | cxfs | orders page scoping |
 | cxfs | BC order sync |
@@ -12,12 +10,12 @@
 | cxfs | add product status on edit page |
 
 
-
-
 # Done
 
 | Project | Description | Finished Date |
 |------|-------------|----------|
+| sheep | break down notes to tasks | 2024-07-10 |
+| cxfs | trend PR reviews | 2024-07-10 |
 | cxfs | trends new calcs breakdown and scoping update | 2024-07-05 |
 | sheep | consignment breakdown | 2024-07-03 |
 | sheep | prep deploy marketplace to staging | 2024-07-03 |
