--- a/.plan.md
+++ b/.plan.md
@@ -3,7 +3,6 @@
 
 | Context | Description |
 |------|-------------|
-| sheep | deploy to live |
 | cxfs | orders page scoping |
 | cxfs | BC order sync |
 | enl | estimate ks project |
@@ -14,6 +13,7 @@
 
 | Project | Description | Finished Date |
 |------|-------------|----------|
+| sheep | deploy to live | 2024-07-11 |
 | sheep | break down notes to tasks | 2024-07-10 |
 | cxfs | trend PR reviews | 2024-07-10 |
 | cxfs | trends new calcs breakdown and scoping update | 2024-07-05 |
